gcc-14.2.0/gcc/testsuite/gdc.test/runnable/imports/ufcs5e.d
version https://git-lfs.github.com/spec/v1
oid sha256:5f8db9e85aa755781ec0ee054179d880aa929f36074e0230c6a55131b0702661
size 575
